--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+ul {
+  margin-top: 0;
+}
+.App-fluid{
+  padding-left: 0;
+  padding-right: 0;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
