--- a/client/src/components/shared/components/Navigation/MainHeader.css
+++ b/client/src/components/shared/components/Navigation/MainHeader.css
@@ -8,8 +8,10 @@
   left: 0;
   background: #000000;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   z-index: 5;
+  padding: -200px;
+
 }
 
 main {
