--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,7 +41,10 @@
 } */
 .App {
   text-align: center;
-  /* height: 100%;
-  width: 100%; */
-
+  height: 100vh;
+  /* width: 100vw; */
+}
+.content{
+  max-width: 84vw;
+  margin-left: 16.5vw;
 }
