--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,8 @@
-
-/* * {
+* {
   box-sizing: border-box;
 }
 
-#page-wrap {
+/* #page-wrap {
   padding-bottom: 10px;
   padding-top: 10px;
 } */
@@ -17,14 +16,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  /* width: 98vw; */
+
 }
-ul {
+
+/* ul {
   margin-top: 0;
 }
-.App-fluid{
+
+.App-fluid {
   padding-left: 0;
   padding-right: 0;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
