--- a/client/src/components/shared/NavBar/NavBar.css
+++ b/client/src/components/shared/NavBar/NavBar.css
@@ -1,8 +1,9 @@
 .navbar {
     background-image: linear-gradient(to left top, #37051d, #732820, #96610c, #8ea61f, #12eb83);
-        width: 84.3vw;
-        max-width: 84.3vw;
-        height: 9vh;
-        margin-left: 15.7vw;
+        width: 100%;
+        /* max-width: 84.3vw; */
+        height: 6rem;
+        /* margin-left: 15.7vw; */
+        padding-left: 0;
         /* overflow-x: hidden; */
 }
