--- a/client/src/components/shared/SideBar/SideBar.css
+++ b/client/src/components/shared/SideBar/SideBar.css
@@ -1,4 +1,4 @@
-
+/* 
 .main-navigation__menu-btn {
   width: 1rem;
   height: 3rem;
@@ -31,6 +31,60 @@
 }
 
 .main-navigation__header-nav {
+  display: none;
+}
+
+.main-navigation__drawer-nav {
+  height: 100%;
+}
+
+@media (min-width: 768px) {
+  .main-navigation__menu-btn {
+    display: none;
+  }
+ 
+
+  .main-navigation__header-nav {
+    display: block;
+  }
+} */
+
+.main-navigation__menu-btn {
+  
+  width: 1rem;
+  height: 3rem;
+  background: transparent;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-right: 2rem;
+  cursor: pointer;
+}
+
+.main-navigation__menu-btn span {
+  
+  display: block;
+  width: 1.5rem;
+  height: 2.5px;
+  background: white;
+}
+
+.main-navigation__title {
+  
+  color: white;
+  padding: 0;
+  margin-top: 0;
+}
+
+
+.main-navigation__title a {
+  text-decoration: none;
+  color: white;
+}
+
+.main-navigation__header-nav {
+  
   display: none;
 }
 
