--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -90,6 +90,24 @@
   top: 10cm;
   margin: 1rem;
 }
+.nav-links li .placeorder {
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 10cm;
+  margin: 1rem;
+}
+.nav-links li .items {
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 11cm;
+  margin: 1rem;
+}
 
 .nav-links a {
   border: 1px solid transparent;
