--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -90,6 +90,43 @@
   top: 10cm;
   margin: 1rem;
 }
+.nav-links li .billerHome {
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 10cm;
+  margin: 1rem;
+}
+.nav-links li .billerWaiter {
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 11cm;
+  margin: 1rem;
+}
+.nav-links li .billerKichen {
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 12cm;
+  margin: 1rem;
+}
+.nav-links li .billerReport {
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 13cm;
+  margin: 1rem;
+}
+
 
 .nav-links a {
   border: 1px solid transparent;
