--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,8 +43,14 @@
   text-align: center;
   height: 100vh;
   /* width: 100vw; */
+  
 }
 .content{
   max-width: 84vw;
-  margin-left: 16.5vw;
+  margin-left: 13.5vw;
+}
+@media (max-width: 640px) {
+  .content {
+    margin-left: 25px;
+  }
 }
