--- a/client/src/components/shared/HamburgerMenu/SideDrawer.css
+++ b/client/src/components/shared/HamburgerMenu/SideDrawer.css
@@ -4,7 +4,9 @@
   top: 0;
   z-index: 100;
   height: 100vh;
-  width: 70%;
-  background: white;
+  width: 100%;
+  background: gray;
+  align-items: center;
+  justify-content: center;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
