--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -14,117 +14,167 @@
 .nav-links li .home {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 3cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 
 .nav-links li .table {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 4cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 
 .nav-links li .Order {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 5cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 
 .nav-links li .waiter {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 6cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 
 .nav-links li .kitchen {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 7cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 
 .nav-links li .biller {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 8cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 
 .nav-links li .adduser {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 9cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 
-.nav-links li .showuser {
-  position: absolute;
-  left: -0.3cm;
-  width: 5cm;
-  text-align: center;
-  font-size: 20px;
-  top: 10cm;
-  margin: 1rem;
-}
+
 .nav-links li .billerHome {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 10cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 .nav-links li .billerWaiter {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 11cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 .nav-links li .billerKichen {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 12cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 .nav-links li .billerReport {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4cm;
   text-align: center;
   font-size: 20px;
   top: 13cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
+}
+.nav-links li .customer {
+  position: absolute;
+  left: -0.3cm;
+  width: 4cm;
+  text-align: center;
+  font-size: 20px;
+  top: 13.9cm;
+  margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
+}
+
+.nav-links li .logout {
+  position: absolute;
+  left: -0.3cm;
+  width: 4cm;
+  text-align: center;
+  font-size: 20px;
+  top: 14.9cm;
+  margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
 
 
