--- a/client/src/components/shared/HamburgerMenu/SideDrawer.css
+++ b/client/src/components/shared/HamburgerMenu/SideDrawer.css
@@ -6,7 +6,16 @@
   height: 100vh;
   width: 100%;
   background: gray;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  
 }
+
+
+  
