--- a/client/src/components/shared/NavBar/NavBar.css
+++ b/client/src/components/shared/NavBar/NavBar.css
@@ -6,4 +6,6 @@
         /* margin-left: 15.7vw; */
         padding-left: 0;
         /* overflow-x: hidden; */
+        /* position: fixed;
+        margin-top: -35px; */
 }
