--- a/client/src/components/AdminPages/AdminStyles.css
+++ b/client/src/components/AdminPages/AdminStyles.css
@@ -2,6 +2,7 @@
     width: 80vw;
     max-width: 80vw;
     margin-left: 1.3vw;
+    /* margin-left: 2rem; */
     margin-top: 5vh;
 }
 @media (max-width: 640px) {
