Notification page added

--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -186,7 +186,7 @@
   list-style-type: none;
   font-weight: bold;
 }
-.nav-links li .timer {
+.nav-links li .notification {
   position: absolute;
   left: -0.3cm;
   width: 5cm;
