--- a/client/src/components/shared/NavBar/NavBar.css
+++ b/client/src/components/shared/NavBar/NavBar.css
@@ -1,11 +1,15 @@
 .navbar {
-    background-image: linear-gradient(to left top, #37051d, #732820, #96610c, #8ea61f, #12eb83);
-        width: 100%;
-        /* max-width: 84.3vw; */
-        height: 4rem;
-        /* margin-left: 15.7vw; */
-        padding-left: 0;
-        /* overflow-x: hidden; */
-        /* position: fixed;
-        margin-top: -35px; */
+  background-image: linear-gradient(
+    to left top,
+    #37051d,
+    #732820,
+    #96610c,
+    #8ea61f,
+    #12eb83
+  );
+  width: 100%;
+
+  height: 4rem;
+
+  padding-left: 0;
 }
