--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -16,7 +16,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 3cm;
+  top: 1cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -29,7 +29,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 4cm;
+  top: 2cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -39,10 +39,10 @@
 .nav-links li .Order {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width: 3cm;
   text-align: center;
   font-size: 20px;
-  top: 5cm;
+  top: 3cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -55,7 +55,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 6cm;
+  top: 4cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -65,10 +65,10 @@
 .nav-links li .kitchen {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width: 5cm;
   text-align: center;
   font-size: 20px;
-  top: 7cm;
+  top: 5cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -81,7 +81,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 8cm;
+  top: 6cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -94,7 +94,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 9cm;
+  top: 7cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -107,7 +107,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 10cm;
+  top: 8cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -119,7 +119,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 11cm;
+  top: 9cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -131,7 +131,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 12cm;
+  top: 10cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -143,7 +143,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 13cm;
+  top: 11cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -155,30 +155,36 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 13.9cm;
+  top: 11.9cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
   font-weight: bold;
 }
-.nav-links li .placeorder {
+.nav-links li .timer {
   position: absolute;
   left: -0.3cm;
   width: 5cm;
   text-align: center;
   font-size: 20px;
-  top: 10cm;
+  top: 12.9cm;
   margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
 }
-.nav-links li .items {
+/* .nav-links li .Tablepage {
   position: absolute;
   left: -0.3cm;
   width: 5cm;
   text-align: center;
   font-size: 20px;
-  top: 11cm;
+  top: 14cm;
   margin: 1rem;
-}
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
+} */
 
 .nav-links li .logout {
   position: absolute;
@@ -186,7 +192,7 @@
   width: 4cm;
   text-align: center;
   font-size: 20px;
-  top: 14.9cm;
+  top: 12.9cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
@@ -198,19 +204,56 @@
   width: 5cm;
   text-align: center;
   font-size: 20px;
-  top: 15.9cm;
+  top: 13.9cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
   font-weight: bold;
 }
 .nav-links li .notification {
+
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 14.9cm;
+  margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
+}
+.nav-links li .Tablepage{
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 15.9cm;
+  margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
+}
+.nav-links li .Catagorypage{
   position: absolute;
   left: -0.3cm;
   width: 5cm;
   text-align: center;
   font-size: 20px;
   top: 16.9cm;
+  margin: 1rem;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
+}
+.nav-links li .Listmenu{
+  position: absolute;
+  left: -0.3cm;
+  width: 5cm;
+  text-align: center;
+  font-size: 20px;
+  top: 17.9cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
