--- a/client/src/css/admin.css
+++ b/client/src/css/admin.css
@@ -1,5 +1,5 @@
 .home {
-  background: radial-gradient(#e0e0eb, #ffff, #e0e0eb);
+  /* background: radial-gradient(#e0e0eb, #ffff, #e0e0eb); */
   width: 173vh;
 }
 
