--- a/client/src/components/shared/NavBar/NavBar.css
+++ b/client/src/components/shared/NavBar/NavBar.css
@@ -1,15 +1,16 @@
 .navbar {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to left top,
     #37051d,
     #732820,
     #96610c,
     #8ea61f,
     #12eb83
-  );
+  ); */
   width: 100%;
-
-  height: 4rem;
+  background-color: rgb(64,224,208);
+  height: 3rem;
+  
 
   padding-left: 0;
 }
