--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -9,16 +9,21 @@
   justify-content: center;
   align-items: center;
 }
+.nav-links li {
+  margin-bottom: 1.3rem;
+ 
+}
 
 .nav-links li .home {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 1cm;
   margin: 1rem;
-  padding: 0;
+ /* margin-bottom: 0.7rem; */
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
@@ -26,12 +31,13 @@
 .nav-links li .table {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width:4.7cm;
   text-align: center;
   font-size: 20px;
   top: 2cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
+  
   list-style-type: none;
   font-weight: bold;
 }
@@ -39,12 +45,13 @@
 .nav-links li .Order {
   position: absolute;
   left: -0.3cm;
-  width: 3cm;
+  width:4.7cm;
   text-align: center;
   font-size: 20px;
   top: 3cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
+  
   list-style-type: none;
   font-weight: bold;
 }
@@ -52,12 +59,12 @@
 .nav-links li .waiter {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width:4.7cm;
   text-align: center;
   font-size: 20px;
   top: 4cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
@@ -65,12 +72,12 @@
 .nav-links li .kitchen {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4.8cm;
   text-align: center;
   font-size: 20px;
   top: 5cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
@@ -78,12 +85,12 @@
 .nav-links li .biller {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width:4.7cm;
   text-align: center;
   font-size: 20px;
   top: 6cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
@@ -91,12 +98,12 @@
 .nav-links li .adduser {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width:4.7cm;
   text-align: center;
   font-size: 20px;
   top: 7cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
@@ -104,60 +111,60 @@
 .nav-links li .billerHome {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width:4.7cm;
   text-align: center;
   font-size: 20px;
   top: 8cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
 .nav-links li .billerWaiter {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 9cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
 .nav-links li .billerKichen {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width:4.7cm;
   text-align: center;
   font-size: 20px;
   top: 10cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
 .nav-links li .billerReport {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 11cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
 .nav-links li .customer {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 11.9cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
@@ -189,24 +196,25 @@
 .nav-links li .logout {
   position: absolute;
   left: -0.3cm;
-  width: 4cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 12.9cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
 .nav-links li .kitchenpage {
   position: absolute;
-  left: -0.5cm;
-  width: 5cm;
+  overflow: hidden;
+  left: -0.3cm;
+  width:4.7cm;
   text-align: center;
   font-size: 20px;
   top: 13.9cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
@@ -237,8 +245,8 @@
 }
 .nav-links li .Catagorypage{
   position: absolute;
-  left: -0.7cm;
-  width: 5cm;
+  left: -0.3cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 16.9cm;
@@ -255,15 +263,17 @@
   font-size: 20px;
   top: 17.9cm;
   margin: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
 }
 .nav-links a {
-  border: 1px solid transparent;
-  color: #292929;
+  border: 0px solid transparent;
+  border-radius: 30px 0px 0px 30px;
+  color:#fff;
   text-decoration: none;
   padding: 0.5rem;
+  display: block;
   position: absolute;
   margin-top: 10cm;
 }
@@ -273,7 +283,7 @@
 .nav-links a.active {
   background: #fff;
   border-color: #292929;
-  color: #292929;
+  color: rgb(18, 173, 173);
 }
 
 .nav-links button {
@@ -310,6 +320,7 @@
   }
 
   .nav-links button {
+
     border: 1px solid white;
     color: white;
     background: transparent;
