--- a/client/src/components/shared/SideBar/SideBarHeader.css
+++ b/client/src/components/shared/SideBar/SideBarHeader.css
@@ -1,12 +1,12 @@
 .main-header {
-  width: 178px;
+  width: 185px;
   height: 100vh;
   display: flex;
   align-items: top;
   position: fixed;
   top: 0;
   left: 0;
-  background: #000000;
+  background:rgb(18, 173, 173);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
   /* padding: 0 1rem; */
   z-index: 5;
