BillerHome design completed

--- a/client/src/components/shared/NavBar/NavBar.css
+++ b/client/src/components/shared/NavBar/NavBar.css
@@ -8,7 +8,7 @@
     #12eb83
   ); */
   width: 100%;
-  background-color: rgb(64,224,208);
+  background-color: rgba(245, 245, 245, 0.836);
   height: 3rem;
   
 
