--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -72,7 +72,7 @@
 .nav-links li .kitchen {
   position: absolute;
   left: -0.3cm;
-  width: 4.8cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 5cm;
@@ -171,7 +171,7 @@
 .nav-links li .timer {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 12.9cm;
@@ -222,7 +222,7 @@
 
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 14.9cm;
@@ -234,7 +234,7 @@
 .nav-links li .Tablepage{
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top:15.9cm;
@@ -258,7 +258,7 @@
 .nav-links li .Listmenu{
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
+  width: 4.7cm;
   text-align: center;
   font-size: 20px;
   top: 17.9cm;
@@ -283,7 +283,7 @@
 .nav-links a.active {
   background: #fff;
   border-color: #292929;
-  color: rgb(18, 173, 173);
+  color: #13274F;
 }
 
 .nav-links button {
