--- a/client/src/css/BillerStyle.css
+++ b/client/src/css/BillerStyle.css
@@ -2,8 +2,10 @@
 .inner-container{
     /* position: relative; */
     /* background-color:#0a2351; */
-    margin-right: "8rem";
+    margin-right: "5rem";
     margin-top: "5rem";
+    margin-left: 0%;
+    
     /* display: inline;
     justify-content: center; */
 }
@@ -42,7 +44,7 @@
 }
 .table{
    
-    width:100%;
+    width:92%;
 }
 
 /* .Tabledesign{
