--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
+  line-height: 1.3;
   background-color: #1F305E;
   /* width: 98vw; */
 
