--- a/client/src/components/Customer/Customer.css
+++ b/client/src/components/Customer/Customer.css
@@ -72,8 +72,8 @@ h3 {
     
 }
 
-p {
-    font-size: 12rem;
+text {
+    font-size: 5rem;
     animation: animate 6s linear infinite;
     font-weight: bold;
     color: red;
@@ -90,7 +90,7 @@ p {
     
 }
 
-h3, p {
+h3, text {
     /* background-color: rgba(236, 61, 61, 0.8); */
     padding: 20px;
     border-radius: 9px;
@@ -106,6 +106,8 @@ h3, p {
     cursor: pointer;
     
 }
+
+
 .carousel1 {
     width: 100%;
     height: 700px;
@@ -176,12 +178,12 @@ h3 {
 } */
 
 
-p {
+text {
     font-size: 3.5rem;
     
 }
 
- p {
+text {
     /* background-color: rgba(207, 20, 20, 0.8); */
     padding: 20px;
     border-radius: 9px;
