AddEmployee page validation added

--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -132,7 +132,7 @@
   list-style-type: none;
   font-weight: bold;
 }
-.nav-links li .billerKichen {
+.nav-links li .billerKitchen {
   position: absolute;
   left: -0.3cm;
   width:4.7cm;
