--- a/client/src/components/AdminPages/AdminStyles.css
+++ b/client/src/components/AdminPages/AdminStyles.css
@@ -1,7 +1,7 @@
 .inner-container{
     width: 80vw;
     max-width: 80vw;
-    margin-left: 1.3vw;
+    margin-left: -2rem;
     /* margin-left: 2rem; */
     margin-top: 5vh;
     padding: 0px;
