--- a/client/src/components/Customer/Customer.css
+++ b/client/src/components/Customer/Customer.css
@@ -1,37 +1,16 @@
-.timer div {
-  border: 2px solid black;
-  border-radius: 2px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  padding: 0.7rem;
-  vertical-align: middle;
-  height: 80px;
-  
-}
-@media (max-width: 630px) {
-    .timer div {
-      /* margin-left: 25px; */
-      width: 0px;
-    }
-  }
-
 .carousel {
     width: 40%;
     height: 700px;
     background-color: black;
     margin-left: 2rem;
-   
-
 }
-@media (max-width: 630px) {
+@media (max-width: 768px) {
     .carousel {
-      /* margin-left: 25px; */
-      width: 250px;
-      height: 500px;
-    
+      margin-left: 2px;
+      width: 100%;
+      height: 600px;
     }
   }
-
 .carouselInner {
     height: 100%;
     width: 100%;
@@ -44,36 +23,24 @@
 }
 
 .carouselInner .left {
-    /* flex: 5%; */
-    /* height: 100%; */
-    /* background-color: rgb(0, 0, 0, 0.6);
-    display: grid; */
-    /* place-items: center; */
-    /* color: rgb(202, 21, 21); */
-    cursor: pointer;
-    
-    
+    cursor: pointer;   
 }
-
 .carouselInner .center {
     flex: 80%;
-    height: 100%;
-    display: grid;
+    height: 80%;
+    display:grid;
     place-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
     text-align: justify;
     text-align-last: center;
-   
 }
-
 h3 {
     font-size: 5rem;
-    background-color: rgb(255, 255, 255, 0.8);
-    
+    background-color: rgb(255, 255, 255, 0.8);   
 }
 
 text {
-    font-size: 5rem;
+    font-size: 3rem;
     animation: animate 6s linear infinite;
     font-weight: bold;
     color: red;
@@ -90,24 +57,17 @@ text {
     
 }
 
+
 h3, text {
-    /* background-color: rgba(236, 61, 61, 0.8); */
+    /* background-color: rgba(250, 245, 245, 0.8); */
     padding: 20px;
     border-radius: 9px;
 }
 
 .carouselInner .right {
-    /* flex: 5%; */
-    /* height: 100%;
-    background-color: rgb(0, 0, 0, 0.6);
-    display: grid;
-    place-items: center;
-    color: white; */
     cursor: pointer;
     
 }
-
-
 .carousel1 {
     width: 100%;
     height: 700px;
@@ -116,15 +76,15 @@ h3, text {
     margin-top: -43.5rem;
 
 }
-@media (max-width: 630px) {
+@media  (max-width: 768px) {
     .carousel1 {
-      /* margin-left: 25px; */
-      width: 250px;
-      height: 500px;
-      
-    
+        margin-left: 0rem;
+        margin-top: 2rem;
+        width: 100%;
+        height: 600px;
     }
   }
+
 .carouselInner1 {
     height: 100%;
     width: 100%;
@@ -133,72 +93,36 @@ h3, text {
     background-size: cover;
     display: flex;
     
-    
-   
 }
 
 .carouselInner1 .left1 {
-    /* flex: 5%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, 0.6);
-    display: grid;
-    place-items: center;
-    color: white; */
     cursor: pointer;
     
 }
-
 .carouselInner1 .center1 {
-    /* flex: 80%; */
-    height: 100%;
+    flex: 80%;
+    height: 80%;
     display: grid;
     place-items: center;
     font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
     text-align-last: center;
-    
-    
 }
-
 h3 {
     font-size: 5rem;
     background-color: rgb(255, 255, 255, 0.8);
-    /* animation: animate 6s linear infinite; */
 }
-/* @keyframes animate {
-    0%
-    {
-        width: 0;
-    }
-    70%
-    {
-        width: 100%;
-    }
-    
-} */
-
 
 text {
     font-size: 3.5rem;
-    
 }
 
 text {
     /* background-color: rgba(207, 20, 20, 0.8); */
     padding: 20px;
     border-radius: 9px;
-
-    
 }
 
 .carouselInner1 .right1 {
-    /* flex: 5%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, 0.6);
-    display: grid;
-    place-items: center;
-    color: white; */
-    cursor: pointer;
-    
-
-}
+    cursor: pointer; 
+} 
