--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,7 @@ body {
   height: 100vh;
   line-height: 1.3;
   background-color: #1F305E;
+  /* background-color: #30D5C8; */
   /* width: 98vw; */
 
 }
