--- a/client/src/components/AdminPages/AdminStyles.css
+++ b/client/src/components/AdminPages/AdminStyles.css
@@ -5,9 +5,76 @@
     /* margin-left: 2rem; */
     margin-top: 5vh;
     padding: 0px;
+    margin-right: 7rem;
     
     /* margin: 0; */
 }
+.card{
+max-width: 100%;
+max-height: 100rem;
+font-family: 'Times New Roman', Times, serif;
+margin: 2rem;
+border-style: groove;
+border-width: 3px;
+/* border-radius:20px; */
+box-shadow: 0 4px 8px 0 rgba(0,0,0,1.0);
+background-image:linear-gradient(to right bottom, #0070BB, #213ea7, #1480ce, #00b98a, #009b7d) ;
+}
+.cardheader
+{
+  color: white;
+  border-radius: 7px;
+  font-size: 25px;
+  padding: 3px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.cardbody{
+  color: white;
+  font-size: 20px;
+}
+.text-center{
+  border: secondary;
+  width: 100%;
+  height: 16rem;
+  font-family: Times New Roman, Times, serif;
+  margin: 2rem;
+  border-style: groove;
+  border-width: 3px;
+  /* border-radius: 25px; */
+  /* sharpcorner: 20px; */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,1.0);
+  background-image: linear-gradient(to right bottom, #0070BB, #0070BB, #0070BB, #00b98a, #009b7d);
+}
+.text-center1{
+  border: secondary;
+  width: 100%;
+  height: 16rem;
+  font-family: Times New Roman, Times, serif;
+  margin: 2rem;
+  border-style: groove;
+  border-width: 3px;
+  /* border-radius: 25px; */
+  /* sharpcorner: 20px; */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,1.0);
+  background-image: linear-gradient(to right bottom,#ff4500,#800080,#ff1493);
+}
+.cardtext{
+  color: white;
+  font-size: 15px;
+}
+/* .waitercard1{
+max-width: 100%;
+max-height: 100rem;
+font-family: 'Times New Roman', Times, serif;
+margin: 2rem;
+border-style: groove;
+border-width: 3px;
+box-shadow:0 4px 8px 0 rgba(0,0,0,1.0);
+background-image: linear-gradient(to right bottom, #0070BB, #0070BB,#0070BB, #00b98a, #009b7d);
+} */
 /* .container{
   padding-left: 0%;
   margin-left: 0%;
