--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,18 +39,21 @@
     transform: rotate(360deg);
   }
 } */
+*{
+  margin-top: 0;
+}
 .App {
   text-align: center;
   height: 100vh;
-  /* width: 100vw; */
-  
-  
+  /* overflow-y: hidden; */
+  overflow-x: hidden;
+  /* width: 100vw; */ 
 }
 .content{
   max-width: 84vw;
-  margin-top: 30.5px;
+  /* margin-top: 30.5px; */
   margin-left: 18.25vw;
-  margin-right: 0% ;
+  margin-right: 5.25vw ;
 }
 @media (max-width: 770px) {
   .content {
