--- a/client/src/css/BillerStyle.css
+++ b/client/src/css/BillerStyle.css
@@ -3,11 +3,14 @@
     /* position: relative; */
     /* background-color:#0a2351; */
     margin-right: "5rem";
-    margin-top: "5rem";
+    /* margin-top: "5rem"; */
     margin-left: 0%;
     
     /* display: inline;
     justify-content: center; */
+}
+.inner-container .row{
+    margin: 0%;
 }
 .chart{
     margin-left: 12%;
@@ -46,7 +49,90 @@
    
     width:92%;
 }
-
+.btntooltipdiv{
+    position: relative;
+    display: inline-block;
+    /* border-bottom: 1px dotted black;  */
+}
+.btntooltipdiv .tooltiptext{
+    visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+}
+.btntooltipdiv:hover .tooltiptext{
+    visibility: visible;
+}
+.row .Container {
+   /* max-width: 955px; */
+   /* width: 100%; */
+   background-color:white;
+   height: 300px;
+   /* margin: auto; */
+   padding: 30px;
+   display: block;
+   /* min-height: 100%; */
+   /* height: 50vh; */
+   overflow-y: auto;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   margin-bottom: 23px;
+}
+.row .Container .message{
+    background-color:#4444FF;
+    line-height: 1.0;
+    padding: 10px;
+    margin: 17px;
+    border: 0px solid black;
+    /* border-radius: 10px; */
+}
+.row .Container .left{
+    /* position: relative; */
+    float: left;
+    min-height: 50px;
+    border-bottom-left-radius: 25px;
+    /* right: 5%; */
+    height: 50px;
+    clear: both;
+}
+.row .Container .right{
+    /* position: relative; */
+  
+    float: right;
+    min-height: 50px;
+    border-bottom-right-radius: 25px;
+    height: 50px;
+    /* left: 45%; */
+    clear: both;
+}
+#send-container{
+    text-align: center;
+    max-width: 985px;
+    width: 100%;
+    display: block;
+    margin: auto;
+}
+#msgimp{
+    width:50%;
+    border: 2px solid black;
+    border-radius: 6px;
+    margin: 8px;
+    height: 35px;
+}
+.btn{
+    cursor: pointer;
+    border: 2px solid black;
+    border-radius: 6px;
+    /* height: 25px; */
+    line-height: 1.0;
+    color: white;
+}
 /* .Tabledesign{
     color: white;
     background: "linear-gradient(to right, #56ccf2, #2f80ed)";
