--- a/client/src/css/BillerStyle.css
+++ b/client/src/css/BillerStyle.css
@@ -1,14 +1,8 @@
 
 .inner-container{
-    /* position: relative; */
-    /* background-color:#0a2351; */
-    margin-right: "5rem";
-    /* margin-top: "5rem"; */
+    margin-right: 5rem;
     margin-left: 0%;
     margin: 25px;
-    
-    /* display: inline;
-    justify-content: center; */
 }
 .inner-container .row{
     margin: 0%;
@@ -24,12 +18,39 @@
     height: 150px;
     
 }
+.cardstyle{
+    margin-left: 2rem;
+}
+.cardsname{
+    max-width: 80%;
+    max-height: 100rem;
+    color: white;
+    background-color: rgb(10,35,81);
+    font-family: "Times New Roman, Times, serif";
+    margin: 1rem;
+    margin-left: 1rem;
+    border-style: "groove";
+    border-width: 3px;
+    border-radius: 10px;
+}
+.cardHeadersname{
+    color: white;
+    border-bottom: "groove";
+    background-color: rgb(10,35,81);
+    border-width: 2px;
+    border-bottom-color: #ffffff;
+    border-style: "groove";
+    border-radius: 7px;
+    padding: 3px;
+    margin: 0px;
+}
 .chartcard{
     background-color:#1F305E;
-   
+   width:20%;
+   height: 50%;
     color: white;
     font-family: "Times New Roman, Times, serif";
-    /* left: "25px"; */
+    
     justify-content: center;
      border-style: "groove";
     border-width: "3px";
@@ -52,35 +73,11 @@
    
     width:92%;
 }
-.btntooltipdiv{
-    position: relative;
-    display: inline-block;
-    /* border-bottom: 1px dotted black;  */
-}
-.btntooltipdiv .tooltiptext{
-    visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
-  position: absolute;
-  z-index: 1;
-}
-.btntooltipdiv:hover .tooltiptext{
-    visibility: visible;
-}
 .row .Container {
-   /* max-width: 955px; */
-   /* width: 100%; */
    background-color:white;
    height: 300px;
-   /* margin: auto; */
    padding: 30px;
    display: block;
-   /* min-height: 100%; */
-   /* height: 50vh; */
    overflow-y: auto;
    background-position: center;
    background-repeat: no-repeat;
@@ -93,25 +90,20 @@
     padding: 10px;
     margin: 17px;
     border: 0px solid black;
-    /* border-radius: 10px; */
 }
-.row .Container .left{
-    /* position: relative; */
+.left{
     float: left;
     min-height: 50px;
     border-bottom-left-radius: 25px;
-    /* right: 5%; */
+  
     height: 50px;
     clear: both;
 }
-.row .Container .right{
-    /* position: relative; */
-  
+.right{
     float: right;
     min-height: 50px;
     border-bottom-right-radius: 25px;
     height: 50px;
-    /* left: 45%; */
     clear: both;
 }
 #send-container{
@@ -126,6 +118,7 @@
     border: 2px solid black;
     border-radius: 6px;
     margin: 8px;
+    margin-bottom: 30px;
     height: 35px;
 }
 .btn{
@@ -136,38 +129,41 @@
     line-height: 1.0;
     color: white;
 }
-/* .Tabledesign{
+.Tabledesign{   
     color: white;
-    background: "linear-gradient(to right, #56ccf2, #2f80ed)";
-    max-width: 80%;
+    width:100%;
     max-height: 100rem;
     font-family: "Times New Roman, Times, serif";
-    margin-top: "2rem"; */
-
-    /* background-color: pink; */
-    /* border-width: "3px";
-    border-radius: "30px";
-} */
-/* thead tr{
-    border-top: 1px solid #f0f0f0 ;
-    border-bottom: 1px solid #f0f0f0 ;
+    margin-top: 4rem;
+    border-width: 3px;
+    border-radius: 20px;
+    border-collapse: "collapse";
 }
-thead td{
-    font-weight: 700;
-} */
+
+
+
+
 
 /* BillerKitchen */
-.col{
-    background-image: linear-gradient(to right bottom, #051437, #004782, #0081a7, #00b98a, #12eb25);
+.chatStyle{
+    margin: '1rem'; 
+    margin-left: "3px";
+    border-style: 'groove';
+    border-width: '3px';
+    width: "100%";
+    border-radius: '7px';
+    height: "100%";
+}
+.chatbox-Design{
     color: white;
     margin: 1rem;
-    margin-left: 3px;
+    margin-left: 3rem;
     border-style: 3px;
     border-width: 3px;
     border-radius: 7px;
     height: 100%;
+    
 }
-
 .card{
     width: 100%;
     max-height: 100rem;
@@ -177,36 +173,8 @@ thead td{
     border-style: groove;
     border-width: 3px;
     border-radius: 7px;
-    box-shadow: 20px 20px 50px grey;
-    background-image: linear-gradient(to right bottom, #051437, #004782, #0081a7, #00b98a, #12eb25);
-}
-.cardheader1{
-    background-color:rgb(128,128,128);
-    border-style: groove;
-    border-width: 3px;
-    border-radius: 7px;
-    padding: 3px;
-    margin: 0px;
-}
-.cols{
-    background-image: linear-gradient(to right bottom,  #004170, #00b98a, #009b7d,#0070BB, #132257);
-    color: white; 
-    margin: 1rem;
-    border-style: groove;
-    border-width: 3px;
-    border-radius: 7px;
-    margin:3rem;
-}
-.table{
-    color: white;
-    width: 100%;
-    max-height: 100rem;
-    font-family: Times New Roman, Times, serif;
-    margin-top:4rem;
-    border-style: groove;
-    border-width: 3px;
-    border-radius: 7px;
-}
+   
+} 
 
 /* BillerReport */
 
