--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -1,4 +1,9 @@
-.nav-links {
+
+
+
+
+
+  .nav-links {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -8,21 +13,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} 
 .nav-links li {
   margin-bottom: 1.3rem;
  
-}
+} 
 
 .nav-links li .home {
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 1cm;
   margin: 1rem;
- /* margin-bottom: 0.7rem; */
   padding: 0.2rem;
   list-style-type: none;
   font-weight: bold;
@@ -31,8 +35,8 @@
 .nav-links li .table {
   position: absolute;
   left: -0.3cm;
-  width:4.7cm;
-  text-align: center;
+  width:6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 2cm;
   margin: 1rem;
@@ -45,8 +49,8 @@
 .nav-links li .Order {
   position: absolute;
   left: -0.3cm;
-  width:4.7cm;
-  text-align: center;
+  width:6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 3cm;
   margin: 1rem;
@@ -59,8 +63,8 @@
 .nav-links li .waiter {
   position: absolute;
   left: -0.3cm;
-  width:4.7cm;
-  text-align: center;
+  width:6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 4cm;
   margin: 1rem;
@@ -69,26 +73,13 @@
   font-weight: bold;
 }
 
-.nav-links li .kitchen {
+.nav-links li .additem {
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 5cm;
-  margin: 1rem;
-  padding: 0.2rem;
-  list-style-type: none;
-  font-weight: bold;
-}
-
-.nav-links li .biller {
-  position: absolute;
-  left: -0.3cm;
-  width:4.7cm;
-  text-align: center;
-  font-size: 20px;
-  top: 6cm;
   margin: 1rem;
   padding: 0.2rem;
   list-style-type: none;
@@ -98,8 +89,21 @@
 .nav-links li .adduser {
   position: absolute;
   left: -0.3cm;
-  width:4.7cm;
-  text-align: center;
+  width:6.5cm;
+  text-align: left;
+  font-size: 20px;
+  top: 6cm;
+  margin: 1rem;
+  padding: 0.2rem;
+  list-style-type: none;
+  font-weight: bold;
+}
+
+.nav-links li .showuser {
+  position: absolute;
+  left: -0.3cm;
+  width:6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 7cm;
   margin: 1rem;
@@ -111,8 +115,8 @@
 .nav-links li .billerHome {
   position: absolute;
   left: -0.3cm;
-  width:4.7cm;
-  text-align: center;
+  width:6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 8cm;
   margin: 1rem;
@@ -123,8 +127,8 @@
 .nav-links li .billerWaiter {
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 9cm;
   margin: 1rem;
@@ -135,8 +139,8 @@
 .nav-links li .billerKitchen {
   position: absolute;
   left: -0.3cm;
-  width:4.7cm;
-  text-align: center;
+  width:6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 10cm;
   margin: 1rem;
@@ -147,8 +151,8 @@
 .nav-links li .billerReport {
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 11cm;
   margin: 1rem;
@@ -159,8 +163,8 @@
 .nav-links li .customer {
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 11.9cm;
   margin: 1rem;
@@ -171,33 +175,20 @@
 .nav-links li .timer {
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 12.9cm;
   margin: 1rem;
   padding: 0;
   list-style-type: none;
   font-weight: bold;
-}
-/* .nav-links li .Tablepage {
+} 
+ .nav-links li .logout {
   position: absolute;
   left: -0.3cm;
-  width: 5cm;
-  text-align: center;
-  font-size: 20px;
-  top: 14cm;
-  margin: 1rem;
-  padding: 0;
-  list-style-type: none;
-  font-weight: bold;
-} */
-
-.nav-links li .logout {
-  position: absolute;
-  left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 12.9cm;
   margin: 1rem;
@@ -209,8 +200,8 @@
   position: absolute;
   overflow: hidden;
   left: -0.3cm;
-  width:4.7cm;
-  text-align: center;
+  width:6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 13.9cm;
   margin: 1rem;
@@ -222,8 +213,8 @@
 
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 14.9cm;
   margin: 1rem;
@@ -234,8 +225,8 @@
 .nav-links li .Tablepage{
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top:15.9cm;
   margin: 1rem;
@@ -246,8 +237,8 @@
 .nav-links li .Catagorypage{
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 16.9cm;
   margin: 1rem;
@@ -258,8 +249,8 @@
 .nav-links li .Listmenu{
   position: absolute;
   left: -0.3cm;
-  width: 4.7cm;
-  text-align: center;
+  width: 6.5cm;
+  text-align: left;
   font-size: 20px;
   top: 17.9cm;
   margin: 1rem;
