--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,8 +17,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
-  line-height: 1.3;
-  background-color: #1F305E;
+  
+  /* background-color: #1F305E; */
   /* background-color: #30D5C8; */
   /* width: 98vw; */
 
