login and add employee page API integration done.

--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -1,3 +1,17 @@
+.login-form{
+  background-color: white;
+  width:40%;
+  /* align-self: center; */
+  margin:17vh 0 0 17vw;
+  border-radius: 8px;
+}
+.type{
+  display: flex;
+}
+.login {
+  width:70% !important;
+}
+
 /* .slideimg {
   height: 685px;
   width: 100%;
