biller and admin css completed and waiterpage pending

--- a/client/src/components/shared/NavBar/NavBar.css
+++ b/client/src/components/shared/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  background-color:#fff;
+  background-color:#1F305E;
   height: 3rem;
   position: fixed;
   overflow: hidden;
