--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,11 +45,16 @@
 }
 .App {
   line-height: 1.3;
-  background-color: #1F305E;
+  /* background-color: #1F305E; */
+  background-color: rgba(238, 237, 237, 0.61);
   text-align: center;
+  width: 100vw;
   height: 100vh;
-  /* overflow-y: hidden; */
+  overflow-y: auto;
   overflow-x: hidden;
+
+  background-attachment: fixed;
+  background-position: center;
   /* width: 100vw; */ 
 }
 .content{
