--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -22,6 +22,7 @@
   margin-left: 17px;
   margin-right: 7px;
   padding-left: 5px;
+  padding-bottom: 7px;
   font-size: 2.5rem;
 }
 /* .Nav-bar .nav-links .home,.Order,.table,.waiter,.additem,.adduser,.showuser,.billerHome,.billerWaiter,.billerKitchen,.billerReport,.logout,.customer,.kitchenpage,.notification,.place_order{
@@ -35,7 +36,7 @@
   width: 6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 1cm;
+  top: 3cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -49,7 +50,7 @@
   width:6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 2.5cm;
+  top: 4.5cm;
   margin: 1rem;
   padding: 0.4rem;
 
@@ -63,7 +64,7 @@
   width:6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 4cm;
+  top: 6cm;
   margin: 1rem;
   padding: 0.4rem;
 
@@ -77,7 +78,7 @@
   width:6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 5.5cm;
+  top: 7.5cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -90,7 +91,7 @@
   width: 6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 7cm;
+  top: 9cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -103,7 +104,7 @@
   width:6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 8.5cm;
+  top: 10.5cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -116,7 +117,7 @@
   width:6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 10cm;
+  top: 12cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -129,7 +130,7 @@
   width:6.5cm;
   text-align: left;
   font-size: 22px;
-  top:11.5cm;
+  top:3cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -142,7 +143,7 @@
   width: 6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 13cm;
+  top: 4.5cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -155,7 +156,7 @@
   width:6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 14.5cm;
+  top: 6cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -168,7 +169,7 @@
   width: 6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 16cm;
+  top: 7.5cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -206,7 +207,7 @@
   width: 6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 20.5cm;
+  top: 3cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -234,7 +235,7 @@
   width: 6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 22cm;
+  top: 4.5cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -247,7 +248,19 @@
   width: 6.5cm;
   text-align: left;
   font-size: 22px;
-  top: 23.5cm;
+  top: 3cm;
+  margin: 1rem;
+  padding: 0.4rem;
+  list-style-type: none;
+  font-weight: bold;
+}
+.nav-links li .Waiter_notification {
+  position: absolute;
+  left: -0.3cm;
+  width: 6.5cm;
+  text-align: left;
+  font-size: 22px;
+  top: 4.5cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
